apps/talos_cluster/weblate/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: weblate
    namespace: weblate
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - weblate.mtrnord.blog
    rules:
        - backendRefs:
              - name: weblate
                port: 80
          timeouts:
              request: 240s
              backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
    name: weblate-compression
    namespace: weblate
spec:
    targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: weblate
    compression:
        - type: Gzip
        - type: Brotli
